src/main/kotlin/com/example/onui/global/config/error/exception/InvalidTokenException.kt
package com.example.onui.global.config.error.exception

import com.example.onui.global.config.error.data.ErrorCode


object InvalidTokenException: BusinessException(ErrorCode.INVALID_TOKEN)
